# taskwarrior-hooks

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
nix/: devshells.nix  formatter.nix
src/: main.rs
test-data/auto-tagger/: invalid-tag-map.json  valid-tag-map.json
